--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "bootstrap": "^5.3.3",
     "msw": "^2.2.14",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.2"
+    "vue-router": "^4.3.2",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
