--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "msw": "^2.2.14",
-    "vue": "^3.4.21",
     "vue-router": "^4.3.2",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.5",
+    "@babel/preset-env": "^7.24.5",
     "@rushstack/eslint-patch": "^1.8.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/jsdom": "^21.1.6",
@@ -32,16 +33,27 @@
     "@vue/eslint-config-typescript": "^13.0.0",
     "@vue/test-utils": "^2.4.5",
     "@vue/tsconfig": "^0.5.1",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^7.1.2",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
+    "html-webpack-plugin": "^5.6.0",
     "jsdom": "^24.0.0",
     "npm-run-all2": "^6.1.2",
     "prettier": "^3.2.5",
+    "rimraf": "^5.0.7",
     "typescript": "~5.4.0",
     "vite": "^5.2.8",
     "vite-plugin-vue-devtools": "^7.0.25",
     "vitest": "^1.4.0",
-    "vue-tsc": "^2.0.11"
+    "vue": "^3.4.27",
+    "vue-loader": "^17.4.2",
+    "vue-style-loader": "^4.1.3",
+    "vue-template-compiler": "^2.7.16",
+    "vue-tsc": "^2.0.11",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   },
   "msw": {
     "workerDirectory": [
